mejorando el index

--- a/templates/Index.html
+++ b/templates/Index.html
@@ -63,7 +63,7 @@
 	<section class="container-fluid">
 
 		<div class="row bg-img-principal align-items-center">
-			<div class="offset-5 col-6 bg-light p-3 d-none d-lg-block">
+			<div>
 				<h3 class="font-color-general">Clínica veterinaria que en verdad se preocupa por tu 🐕</h3>
 				<p>
 					Tenemos más de 10 años ofreciendo nuestros servicios a personas como tú, que necesitan la mejor atención para su mascota.	
@@ -73,16 +73,6 @@
 				</p>
 			</div>
 
-
-			<div class="col-10 mx-auto bg-light p-3 d-block d-lg-none">
-				<h3 class="font-color-general">Clínica veterinaria que en verdad se preocupa por tu 🐕</h3>
-				<p>
-					Tenemos más de 10 años ofreciendo nuestros servicios a personas como tú, que necesitan la mejor atención para su mascota.	
-				</p>
-				<p>
-					Tenemos disponibles a los mejores veterinarios de la ciudad. Están en capacitación constante y siempre disponibles para darte el mejor servicio.
-				</p>
-			</div>
 
 		</div>
 		
@@ -101,7 +91,7 @@
 		<div class="row">
 			<div class="col-12 col-lg-4">
 				<h5 class="font-color-general text-center p-3">Nutrición</h5>
-				<img src="https://micarrerauniversitaria.com/wp-content/uploads/2018/03/veterinario-1.gif" class="img-fluid" alt="imagen nutricion">	
+				<img src="https://escuelaclinica.lat/wp-content/uploads/LCSA166.jpg" class="img-fluid" alt="imagen nutricion">	
 				<p class="p-3">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
