--- a/templates/style.css
+++ b/templates/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .bg-img-principal {
-	background-image: url("https://bosworthinstitute.com/wp-content/uploads/2020/07/veterinario-bosworth-carrera.png");
+	background-image: url("https://uds.edu.mx/wp-content/uploads/2020/09/veterin.jpg");
 	background-size: cover;
 	height: 650px;
 	background-position: center center;
@@ -52,7 +52,7 @@ body {
 
 	/* tenemos 1 imagen específica para móvil */
 	.bg-img-principal {
-		background-image: url("https://bosworthinstitute.com/wp-content/uploads/2020/07/veterinario-bosworth-carrera.png");
+		background-image: url("vet.gif");
 		background-size: cover;
 		height: 500px;
 		background-position: center center;	
