--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
                 <div class="mb-md-5 mt-md-4 pb-5" >
     
                     
-                    <form action="/logeandose" method="post" >
+                    <form action="/auth/login" method="post" >
 
                         <label for="nombreUser">Nombre de Usuario</label>
 
