--- a/templates/404.html
+++ b/templates/404.html
@@ -1,1 +1,50 @@
-<h1>La pagina no fue encontrada</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
+    <style>
+        body {
+            height: 400px;
+            background-image: url("https://assets.materialup.com/uploads/037f92e8-06d1-48d0-8394-c629f8397ca2/preview.png");
+            background-size: cover;
+            background-repeat:no-repeat;
+            background-position: center center;
+        }
+        button{
+            height: 70px;
+            position: absolute;
+            top: 47%;
+            left: 5%;
+            margin: -25px 0 0 -25px;
+
+            background: #1E9EAE;
+            border-radius: 999px;
+            box-shadow: #1E9EAE 0 10px 20px -10px;
+            box-sizing: border-box;
+            color: #FFFFFF;
+            cursor: pointer;
+            font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 24px;
+            opacity: 1;
+            outline: 0 solid transparent;
+            padding: 10px 22px;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            width: fit-content;
+            word-break: break-word;
+            border: 0;
+            padding: 0px 80px 0px 80px;
+        }
+    </style>
+</head>
+<body>
+        
+        <button>GO HOME</button>
+</body>
+</html>
