--- a/templates/login.html
+++ b/templates/login.html
@@ -1,65 +1,40 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-
-    <!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Bootstrap CSS -->
+    <title>Inicio de Sesión</title>
+    <!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-	<!-- google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Underdog&display=swap" rel="stylesheet">
-
-	<!-- nuestros estilos-->
-	<link rel="stylesheet" type="text/css" href="style.css">
-
-	<!-- iconos de friconix-->
-	<script defer src="https://friconix.com/cdn/friconix.js"></script>
 </head>
 <body>
-    <section class="vh-100 gradient-custom">
+    <section class="vh-100" style="background-color: #508bfc;">
         <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-            <div class="card bg-dark text-white" style="border-radius: 1rem;">
+              <div class="card shadow-2-strong" style="border-radius: 1rem;">
                 <div class="card-body p-5 text-center">
-    
-                <div class="mb-md-5 mt-md-4 pb-5" >
-    
-                    
-                    <form action="/auth/login" method="post" >
-
-                        <label for="nombreUser">Nombre de Usuario</label>
-
-                        <input type="text" name="email"><br/>
-
-                        <label for="contraseña">Contraseña</label>
-
-                        <input type="password" name="password"><br/>
-
-
-                        <input lass="btn btn-outline-light btn-lg px-5" type="submit" value="Iniciar Sesión" />
-
-                    </form>
-                    
-                    <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                    <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                    <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                    <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                    </div>
-
+      
+                  <h3 class="mb-5">BIENVENIDO</h3>
+      
+                  <div class="form-outline mb-4">
+                    <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
+                    <label class="form-label" for="typeEmailX-2">Correo</label>
+                  </div>
+      
+                  <div class="form-outline mb-4">
+                    <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
+                    <label class="form-label" for="typePasswordX-2">Contraseña</label>
+                  </div>
+      
+                  <button class="btn btn-primary btn-lg btn-block" type="submit">Iniciar Sesión</button>
+      
                 </div>
-    
-                </div>
+              </div>
             </div>
-            </div>
+          </div>
         </div>
-        </div>
-    </section>
+      </section>
 </body>
 </html>
