--- a/templates/funcionesAdmin.html
+++ b/templates/funcionesAdmin.html
@@ -33,7 +33,7 @@
     
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Mostrar usuarios</a>
                     <!-- PENDIENTE DE ACTUALIZAR MASCOTAS Y CITAS-->
-                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Mostrar mascotas</a>
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas?token={{auth_token}}">Mostrar mascotas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Mostrar citas</a>
 
                     <div class="d-flex justify-content-center text-center mt-4 pt-1">
