--- a/templates/funcionesUsuario.html
+++ b/templates/funcionesUsuario.html
@@ -32,7 +32,7 @@
                 <div class="mb-md-5 mt-md-4 pb-5" >
     
                     <!-- PENDIENTE-->
-                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Mostrar mascotas</a>
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas-user?token={{auth_token}}">Mostrar mascotas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Mostrar citas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Agendar cita</a>
                     <div class="d-flex justify-content-center text-center mt-4 pt-1">
