--- a/templates/funcionesUsuario.html
+++ b/templates/funcionesUsuario.html
@@ -30,9 +30,11 @@
                 <div class="card-body p-5 text-center">
     
                 <div class="mb-md-5 mt-md-4 pb-5" >
-    
+                    <p> {{token}} </p>
+                    
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas-user?token={{token}}">Mostrar mascotas</a>
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascota/registrar?token={{token}}">Agregar mascota</a>
                     <!-- PENDIENTE-->
-                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas-user?token={{auth_token}}">Mostrar mascotas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Mostrar citas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Agendar cita</a>
                     <div class="d-flex justify-content-center text-center mt-4 pt-1">
