reorganizando registro de mascotas

--- a/templates/funcionesUsuario.html
+++ b/templates/funcionesUsuario.html
@@ -30,7 +30,8 @@
                 <div class="card-body p-5 text-center">
     
                 <div class="mb-md-5 mt-md-4 pb-5" >
-                    <p> {{token}} </p>
+                    <!-- <p> {{token}} </p>-->
+                    <p> Seleccione la funcion que desee realizar</p>
                     
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas-user?token={{token}}">Mostrar mascotas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascota/registrar?token={{token}}">Agregar mascota</a>
