--- a/templates/agregarMascotas.html
+++ b/templates/agregarMascotas.html
@@ -16,14 +16,13 @@
               <div class="card shadow-2-strong" style="border-radius: 1rem;">
                 <div class="card-body p-5 text-center">
                   
-                  <p> {{token}} </p>
+                  <!--<p> {{token}} </p>-->
 
                   <h3 class="mb-5">Ingrese los datos de su mascota</h3>
                   
                   <form action="/mascota/registro" method="post"> 
                     <div class="form-outline mb-4">
-                      <input type="tex" name="token" value = {{token}} id="typeEmailX-2" class="form-control form-control-lg" />
-                      <label class="form-label" for="typeEmailX-2">token</label>
+                      <input type="hidden" name="token" value = {{token}} id="typeEmailX-2" class="form-control form-control-lg" />
                     </div>
 
                   <form action="/mascota/registro" method="post"> 
@@ -31,15 +30,15 @@
                     <input type="tex" name="nombre" id="typeEmailX-2" class="form-control form-control-lg" />
                     <label class="form-label" for="typeEmailX-2">Nombre</label>
                   </div>
-      
-                  <div class="form-outline mb-4">
-                    <input type="text" name="raza" id="typePasswordX-2" class="form-control form-control-lg" />
-                    <label class="form-label" for="typePasswordX-2">Raza</label>
-                  </div>
-
+                  
                   <div class="form-outline mb-4">
                     <input type="text" name="tipo" id="typePasswordX-2" class="form-control form-control-lg" />
                     <label class="form-label" for="typePasswordX-2">Tipo</label>
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <input type="text" name="raza" id="typePasswordX-2" class="form-control form-control-lg" />
+                    <label class="form-label" for="typePasswordX-2">Raza</label>
                   </div>
       
                   <button class="btn btn-primary btn-lg btn-block" type="submit">Registrar mascota</button>
