--- a/templates/funcionesAdmin.html
+++ b/templates/funcionesAdmin.html
@@ -30,11 +30,12 @@
                 <div class="card-body p-5 text-center">
     
                 <div class="mb-md-5 mt-md-4 pb-5" >
-    
-                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Mostrar usuarios</a>
+                    <p> {{token}} </p>
+
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{token}}">Mostrar usuarios</a>
                     <!-- PENDIENTE DE ACTUALIZAR MASCOTAS Y CITAS-->
-                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas?token={{auth_token}}">Mostrar mascotas</a>
-                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{auth_token}}">Mostrar citas</a>
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas?token={{token}}">Mostrar mascotas</a>
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{token}}">Mostrar citas</a>
 
                     <div class="d-flex justify-content-center text-center mt-4 pt-1">
                     <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
