--- a/templates/funcionesUsuario.html
+++ b/templates/funcionesUsuario.html
@@ -35,10 +35,10 @@
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas-user?token={{token}}">Mostrar mascotas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascota/registrar?token={{token}}">Agregar mascota</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/cita/registrar?token={{token}}">Agendar cita</a>
-                    
+
                     <!-- PENDIENTE-->
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{token}}">Mostrar citas</a>
-                    
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/">Cerrar sesión</a>
                     <div class="d-flex justify-content-center text-center mt-4 pt-1">
                     <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
                     <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
