--- a/templates/funcionesAdmin.html
+++ b/templates/funcionesAdmin.html
@@ -36,6 +36,7 @@
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas?token={{token}}">Mostrar mascotas</a>
                     <!-- PENDIENTE DE ACTUALIZAR MASCOTAS Y CITAS-->
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{token}}">Mostrar citas</a>
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/">Cerrar sesión</a>
 
                     <div class="d-flex justify-content-center text-center mt-4 pt-1">
                     <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
