--- a/templates/funcionesAdmin.html
+++ b/templates/funcionesAdmin.html
@@ -31,11 +31,11 @@
     
                 <div class="mb-md-5 mt-md-4 pb-5" >
                     <!--<p> {{token}} </p>-->
+                    <h1> Seleccione la funcion que desee realizar</h1>
 
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{token}}">Mostrar usuarios</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas?token={{token}}">Mostrar mascotas</a>
-                    <!-- PENDIENTE DE ACTUALIZAR MASCOTAS Y CITAS-->
-                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{token}}">Mostrar citas</a>
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/citas?token={{token}}">Mostrar citas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/">Cerrar sesión</a>
 
                     <div class="d-flex justify-content-center text-center mt-4 pt-1">
