--- a/templates/funcionesUsuario.html
+++ b/templates/funcionesUsuario.html
@@ -30,14 +30,12 @@
                 <div class="card-body p-5 text-center">
     
                 <div class="mb-md-5 mt-md-4 pb-5" >
-                    <p> Seleccione la funcion que desee realizar</p>
+                    <h1> Seleccione la funcion que desee realizar</h1>
                     
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascotas-user?token={{token}}">Mostrar mascotas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/mascota/registrar?token={{token}}">Agregar mascota</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/cita/registrar?token={{token}}">Agendar cita</a>
-
-                    <!-- PENDIENTE-->
-                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/usuarios?token={{token}}">Mostrar citas</a>
+                    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/citas-user?token={{token}}">Mostrar citas</a>
                     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/">Cerrar sesión</a>
                     <div class="d-flex justify-content-center text-center mt-4 pt-1">
                     <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
