--- a/templates/login.html
+++ b/templates/login.html
@@ -30,8 +30,10 @@
                   </div>
       
                   <button class="btn btn-primary btn-lg btn-block" type="submit">Iniciar Sesión</button>
+                  
                 </form>
 
+                <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/">Volver al inicio</a>
                 </div>
               </div>
             </div>
