--- a/templates/registro.html
+++ b/templates/registro.html
@@ -32,7 +32,8 @@
                   <button class="btn btn-primary btn-lg btn-block" type="submit">Continuar</button>
                   
                   </form>
-                  <hr class="my-4">
+
+                  <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/">Volver al inicio</a>
       
                   
       
