--- a/templates/agregarMascotas.html
+++ b/templates/agregarMascotas.html
@@ -43,7 +43,8 @@
       
                   <button class="btn btn-primary btn-lg btn-block" type="submit">Registrar mascota</button>
                 </form>
-
+                
+                <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/funcionesUsuario?auth_token={{token}}">Regresar</a>
                 </div>
               </div>
             </div>
