--- a/templates/Index.html
+++ b/templates/Index.html
@@ -27,7 +27,7 @@
 		<div class="row">
 			<div class="col-12 col-lg-6 text-center text-lg-left my-3 pl-5">
 				Col. Centro, Nuevo Laredo
-			</div>
+			</div> 
 
 			<div class="col-12 col-lg-6 text-center text-lg-right my-3 pr-5">
 				Lunes a Viernes de 9 am a 7 pm. <span class="font-weigth-bolder"><i class="fi-xnsuxl-smartphone-solid"></i> 867 123 5598</span> 
@@ -64,7 +64,7 @@
 
 		<div class="row bg-img-principal align-items-center">
 			<div>
-				<h3 class="font-color-general">Clínica veterinaria que en verdad se preocupa por tu 🐕</h3>
+				<h3 align="center" class="font-color-general">Clínica veterinaria que en verdad se preocupa por tu mascota 🐕🐈</h3><br>
 				<p>
 					Tenemos más de 10 años ofreciendo nuestros servicios a personas como tú, que necesitan la mejor atención para su mascota.	
 				</p>
@@ -90,30 +90,30 @@
 
 		<div class="row">
 			<div class="col-12 col-lg-4">
-				<h5 class="font-color-general text-center p-3">Nutrición</h5>
+				<h5 class="font-color-general text-center p-3">Evaluación Nutricional</h5>
 				<img src="https://escuelaclinica.lat/wp-content/uploads/LCSA166.jpg" class="img-fluid" alt="imagen nutricion">	
 				<p class="p-3">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+					En la Veterinaria Huellitas creemos firmemente que una dieta sana y nutritiva establece los cimientos para el bienestar y prevención de enfermedades a lo largo de la vida de su mascota. <br>
+					La orientación nutricional es un componente vital en sus cuidados, ya que a medida que envejecen sus necesidades nutricionales cambian.
 				</p>
 
 			</div>
 
 			<div class="col-12 col-lg-4">
-				<h5 class="font-color-general text-center p-3">Chequeo General</h5>
+				<h5 class="font-color-general text-center p-3">Consulta General</h5>
 				<img src="https://papelmatic.com/wp-content/uploads/2019/09/papelmatic-higiene-profesional-limpieza-desinfeccion-clinicas-veterinarias.jpg" class="img-fluid" alt="imagen chequeo">	
 				<p class="p-3">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+					La Clínica Veterinaria Huellitas cuenta con médicos veterinarios expertos en diferentes disciplinas y con la metodología necesaria para llegar a los diagnósticos que permitirán enfocar los tratamientos de manera eficiente y oportuna, seguimos a detalle el expediente clínico orientado a problemas, en el que al conjuntar los datos generales, la historia clínica y el examen clínico podemos arrojar la lista de problemas que nos permitirá agrupar los signos de acuerdo a problemas específicos y recomendar las pruebas de laboratorio necesarias.
 				</p>
 			</div>
 
 			<div class="col-12 col-lg-4">
-				<h5 class="font-color-general text-center p-3">Masaje</h5>
+				<h5 class="font-color-general text-center p-3">Esterilización</h5>
 				<img src="https://theeducatedmachine.com/wp-content/uploads/2021/05/Medicina-veterinaria.jpg" class="img-fluid" alt="imagen masaje">	
 				<p class="p-3">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+					Si tienes una mascota, una de las decisiones más importantes que debes tomar es acerca de esterilizar o castrar a tu perro o gato.
+					<br>
+					La esterilización veterinaria o castración es un procedimiento quirúrgico que requiere de una hospitalización mínima, ofreciendo un gran beneficio para la salud de tus mascotas de por vida. 
 				</p>
 			</div>
 
