agregando validaciones y mensajes para pruebas

--- a/templates/agregarCitas.html
+++ b/templates/agregarCitas.html
@@ -30,7 +30,7 @@
 
                   <div class="form-outline mb-4">
                     <input type="tex" name="nombre" id="typeEmailX-2" class="form-control form-control-lg" />
-                    <label class="form-label" for="typeEmailX-2">ID Mascota</label>
+                    <label class="form-label" for="typeEmailX-2">Mascota</label>
                   </div>
                   
                   <div class="form-outline mb-4">
