--- a/templates/agregarMascotas.html
+++ b/templates/agregarMascotas.html
@@ -40,7 +40,8 @@
                     <input type="text" name="raza" id="typePasswordX-2" class="form-control form-control-lg" />
                     <label class="form-label" for="typePasswordX-2">Raza</label>
                   </div>
-      
+                  
+                  <p> {{mensaje}} </p>
                   <button class="btn btn-primary btn-lg btn-block" type="submit">Registrar mascota</button>
                 </form>
                 
