--- a/templates/printUserPets.html
+++ b/templates/printUserPets.html
@@ -7,7 +7,7 @@
     <title>Mascotas</title>
 </head>
 <body>
-    <h1> Mostrando todas las mascotas registradas en la aplicación</h1>
+    <h1> Mostrando todas las mascotas registradas por el usuario.</h1>
 
     {% if mascotas %}
         <!-- Tabla con bordes-->
@@ -26,6 +26,6 @@
         <p> no hay mascotas registradas </p>
     {% endif %}
 
-    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/funcionesAdmin?auth_token={{token}}">Regresar</a>
+    <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/funcionesUsuario?auth_token={{token}}">Regresar</a>
 </body>
 </html>
