--- a/templates/Index.html
+++ b/templates/Index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Underdog&display=swap" rel="stylesheet">
 
 	<!-- nuestros estilos-->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<!--<link rel="stylesheet" type="text/css" href="style_index.css">-->
 
 	<!-- iconos de friconix-->
 	<script defer src="https://friconix.com/cdn/friconix.js"></script>
