--- a/templates/agregarCitas.html
+++ b/templates/agregarCitas.html
@@ -34,7 +34,7 @@
                   </div>
                   
                   <div class="form-outline mb-4">
-                    <input type="datetime" name="fecha" step="1" min="2023-01-01T00:00Z" max="2023-06-31T12:00Z" value="2023-01-01T12:00" id="typePasswordX-2" class="form-control form-control-lg" />
+                    <input type="datetime-local" name="fecha" step="1" min="2023-01-01T00:00Z" max="2023-06-31T12:00Z" value="2023-01-01T12:00" id="typePasswordX-2" class="form-control form-control-lg" />
                     <label class="form-label" for="typePasswordX-2">Fecha</label>
                   </div>
 
