--- a/templates/printUserPets.html
+++ b/templates/printUserPets.html
@@ -29,3 +29,44 @@
     <a class="nav-link font-color-general mr-3 ml-3" href="http://127.0.0.1:5000/funcionesUsuario?auth_token={{token}}">Regresar</a>
 </body>
 </html>
+
+
+<style>
+    table {
+        border-collapse: collapse;
+        width: 100%;
+        border-spacing: 1; 
+        background:white;
+        border-radius:6px;
+        overflow:hidden;
+        max-width:800px; 
+        margin:0 auto;
+        position:relative;
+    }
+    th, td {
+        text-align: left;
+        padding: 12px;
+    }
+    tr:nth-child(even){background-color: #f2f2f2}
+    th {
+        background-color: #508bfc;
+        color: black;
+    }
+    h1{
+        text-align: center;
+    }
+    a:link, a:visited {
+        background-color: #508bfc;
+        color: black;
+        border: 2px solid #508bfc;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+    }
+
+    a:hover, a:active {
+        background-color: #2b70f0;
+        color: white;
+    }
+</style>
